--- a/Xirxians.html
+++ b/Xirxians.html
@@ -23,21 +23,29 @@
             <section style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb" class="container breadcrumb-container">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item" aria-current="page"><a href="#">Category</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Sci-Fi</li>
+                    <li class="breadcrumb-item"><a href="#">Category</a></li>
+                    <li class="breadcrumb-item"><a href="sci-fi.html">Sci-Fi</a></li>
+                    <li class="breadcrumb-item">Xirxians Inputs</li>
                 </ol>
             </section>
 
 
             <section class="story-container">
-                <div class="d-grid gap-5">
-                    <button class="btn btn-primary" type="button" onclick="location.href='Xirxians.html'">The Threat of the Xirixians</button>
-                    <button class="btn btn-primary" type="button" onclick="location.href='RogueAI.html'">The Battle Against the Rogue AI</button>
-                  </div>
+                <form id="myform" class="d-grid gap-2">
+                    <input type="text" required>
+                    <input type="text" required>
+                    <input type="text" required>
+                    <input type="text" required>
+                    <input type="text" required>
+                    <input type="text" required>
+                    <input type="text" required>
+                    <input type="text" required>
+                </form>
             </section>
 
             <section class="images-section">
                 <img src="assets/SciFi-img1.svg" class="img-fluid" alt="...">
+                <button class="btn btn-primary" form="myform" type="submit">Create story</button>
                 <img src="assets/SciFi-img2.svg" class="img-fluid" alt="...">
             </section>
         </div>
@@ -46,6 +54,5 @@
             <p class="text-center p-4">2023 LibZilla. All Rights Reserved.</p>
         </footer>
 
-        <script src="js/index.js"></script>
     </body>
 </html>
