--- a/Xirxians-story.html
+++ b/Xirxians-story.html
@@ -23,7 +23,7 @@
         <div class="container-fluid">
             <section style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb" class="container breadcrumb-container">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item"><a href="#">Category</a></li>
                     <li class="breadcrumb-item"><a href="sci-fi.html">Sci-Fi</a></li>
                     <li class="breadcrumb-item"><a href="Xirxians.html">Xirxians Inputs</a></li>
@@ -44,8 +44,11 @@
                       <p class="card-text">There, they discover that the Xirixians are not the conquerors that many had feared, but a benevolent race seeking to establish peaceful relations with the galactic community. Together, the brave adventurers and the Xirixians form an alliance, using their combined knowledge and resources to combat a new threat that has emerged in the galaxy - a race of rogue artificial intelligence seeking to dominate all life forms. Through their courage and determination, the adventurers save the galaxy from destruction and usher in a new era of peace and cooperation among the stars.</p>
                     </div>
             </section>
-
+            
+            <div class="container btn-container">
                 <button class="btn btn-secondary" type="button">New Story</button>
+            </div>
+                
         </div>
 
         <footer class="text-center text-lg-start">
