--- a/Xirxians.html
+++ b/Xirxians.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/story.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Poppins:wght@400;600&family=Ultra&display=swap" rel="stylesheet">
@@ -22,7 +23,7 @@
         <div class="container-fluid">
             <section style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb" class="container breadcrumb-container">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item"><a href="#">Category</a></li>
                     <li class="breadcrumb-item"><a href="sci-fi.html">Sci-Fi</a></li>
                     <li class="breadcrumb-item">Xirxians Inputs</li>
@@ -32,14 +33,14 @@
 
             <section class="story-container">
                 <form id="myform" class="d-grid gap-2">
-                    <input type="text" required>
-                    <input type="text" required>
-                    <input type="text" required>
-                    <input type="text" required>
-                    <input type="text" required>
-                    <input type="text" required>
-                    <input type="text" required>
-                    <input type="text" required>
+                    <input type="text" required aria-label="Alien Name" class="inputs" placeholder="Alien Name">
+                    <input type="text" required aria-label="" class="inputs">
+                    <input type="text" required aria-label="" class="inputs">
+                    <input type="text" required aria-label="" class="inputs">
+                    <input type="text" required aria-label="" class="inputs">
+                    <input type="text" required aria-label="" class="inputs">
+                    <input type="text" required aria-label="" class="inputs">
+                    <input type="text" required aria-label="" class="inputs">
                 </form>
             </section>
 
