added health category

--- a/Category.html
+++ b/Category.html
@@ -50,7 +50,7 @@
                     <span>Coding Journey</span> 
                 </div>
             
-                <div class="col-md-3">
+                <div class="col-md-3" onclick="location.href='health.html'" >
                     <div class="icon">
                         <img src="assets/Health-icon.svg" class="img-fluid icon-img" alt="...">
                     </div>
