changed health stories names

--- a/health.html
+++ b/health.html
@@ -31,8 +31,8 @@
 
             <section class="story-container">
                 <div class="d-grid gap-5">
-                    <button class="btn btn-primary" type="button" onclick="location.href='Healthy-lifestyle.html'">A healthy lifestyle</button>
-                    <button class="btn btn-primary" type="button" onclick="location.href='Bad-choices.html'">Bad choices cause pain</button>
+                    <button class="btn btn-primary" type="button" onclick="location.href='Health-story1'">A healthy lifestyle</button>
+                    <button class="btn btn-primary" type="button" onclick="location.href='Health-story2'">Bad choices cause pain</button>
                   </div>
             </section>
 
