--- a/coding.html
+++ b/coding.html
@@ -24,21 +24,20 @@
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item" aria-current="page"><a href="#">Category</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Sci-Fi</li>
+                    <li class="breadcrumb-item active" aria-current="page">Coding Journey</li>
                 </ol>
             </section>
 
 
             <section class="story-container">
                 <div class="d-grid gap-5">
-                    <button class="btn btn-primary" type="button" onclick="location.href='Xirxians.html'">The Threat of the Xirixians</button>
-                    <button class="btn btn-primary" type="button" onclick="location.href='RogueAI.html'">The Battle Against the Rogue AI</button>
+                    <button class="btn btn-primary" type="button" onclick="location.href='CodingMastery.html'">Journey to Coding Mastery</button>
+                    <button class="btn btn-primary" type="button" onclick="location.href='JavascriptStory.html'">Java or JavaScript</button>
                   </div>
             </section>
 
-            <section class="images-section">
-                <img src="assets/SciFi-img1.svg" class="img-fluid" alt="...">
-                <img src="assets/SciFi-img2.svg" class="img-fluid" alt="...">
+            <section class="images-section2">
+                <img src="assets/Developers.png" class="img-fluid" alt="...">
             </section>
         </div>
 
