--- a/Xirxians.html
+++ b/Xirxians.html
@@ -24,7 +24,7 @@
             <section style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb" class="container breadcrumb-container">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Category</a></li>
+                    <li class="breadcrumb-item"><a href="Category.html">Category</a></li>
                     <li class="breadcrumb-item"><a href="sci-fi.html">Sci-Fi</a></li>
                     <li class="breadcrumb-item">The Threat of the Xirixians</li>
                 </ol>
