--- a/health.html
+++ b/health.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Sci-Fi Category</title>
+        <title>Health Category</title>
+        <link rel="icon" type="image/x-icon" href="/assets/Libzilla_favicon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
         <link rel="stylesheet" href="css/styles.css">
@@ -36,10 +37,12 @@
                   </div>
             </section>
 
-            <section class="images-section">
-                <img src="" class="img-fluid" alt="...">
+            
+            <section class="images-section2">
                 <img src="assets/Doctors.png" class="img-fluid" alt="...">
             </section>
+
+
         </div>
 
         <footer class="text-center text-lg-start">
