--- a/health.html
+++ b/health.html
@@ -32,8 +32,8 @@
 
             <section class="story-container">
                 <div class="d-grid gap-5">
-                    <button class="btn btn-primary" type="button" onclick="location.href='Health-story1'">A healthy lifestyle</button>
-                    <button class="btn btn-primary" type="button" onclick="location.href='Health-story2'">Bad choices cause pain</button>
+                    <button class="btn btn-primary" type="button" onclick="location.href='Health-story1.html'">A healthy lifestyle</button>
+                    <button class="btn btn-primary" type="button" onclick="location.href='Health-story2.html'">Bad choices cause pain</button>
                   </div>
             </section>
 
