--- a/PrincessandPea.html
+++ b/PrincessandPea.html
@@ -29,6 +29,9 @@
                     <li class="breadcrumb-item"><a href="fairytales.html">Fairytales</a></li>
                     <li class="breadcrumb-item">Princess and the pea</li>
                 </ol>
+                <div class="extra">
+                    <span><img src="/v43-tier1-team-03/assets/Info-icon.svg" alt="info icon" class="info"></span>
+                </div>
             </section>
 
             <div class="switch active">
@@ -42,7 +45,6 @@
                         <input type="text" required aria-label="" class="inputs" id="adjective2" placeholder="Adjective">
                         <input type="text" required aria-label="" class="inputs" id="verb1" placeholder="Verb">
                         <input type="text" required aria-label="" class="inputs" id="verb2" placeholder="Verb">
-                        
                     </form>
                 </section>
                 <button class="btn btn-primary" form="myform" type="submit" id="btn-submit">Create story</button>
@@ -82,7 +84,7 @@
         <footer class="text-center text-lg-start">
             <p class="text-center p-4">2023 LibZilla. All Rights Reserved.</p>
         </footer>
-        <script src="/js/romantic.js"></script>
+        <script src="/js/fairytales2.js"></script>
         <script src="/js/index.js"></script>
     </body>
 </html>
