--- a/PrincessandPea.html
+++ b/PrincessandPea.html
@@ -10,6 +10,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Poppins:wght@400;600&family=Ultra&display=swap" rel="stylesheet">
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/0.9.0rc1/jspdf.min.js"></script>
     </head>
 
     <body style="text-align: center;">
@@ -30,7 +31,9 @@
                     <li class="breadcrumb-item">Princess and the pea</li>
                 </ol>
                 <div class="extra">
-                    <span><img src="/v43-tier1-team-03/assets/Info-icon.svg" alt="info icon" class="info"></span>
+                    <div id="print-btn"></div>
+                    <button id="submit">Download PDF File</button>
+                    <span title="Complete the inputs with nouns, verbs, adjectives, etc. in order to get a story."><img src="/v43-tier1-team-03/assets/Info-icon.svg" alt="info icon" class="info"></span>
                 </div>
             </section>
 
@@ -57,7 +60,7 @@
             <div class="switch">
                 <section class="container card">
                     <span id="close">X</span>
-                    <div class="card-body">
+                    <div class="card-body" id="print">
                       <h5 class="card-title">The <span class="input-holder noun-one"></span> and the <span class="input-holder noun-two"></span></h5>
                       <p class="card-text">Once upon a time, there was a beautiful <span class="input-holder noun-one"></span> who lived in a grand <span class="input-holder noun-three"></span>. She was kind and gentle, but she had trouble sleeping at night. No matter how many mattresses she <span class="input-holder" id="verb-two"></span> on her <span class="input-holder noun-four"></span>, she always felt a lump that kept her awake.</p>
 
